
Updated MC3 submodule.

*****

Got Light-curve MCMC up and running.
Wrote a basic screen summary output.
TBD: LC plot.
TBD: Put LC modeling into output folder.
TBD: Setup LC log.
TBD: Store LC output into pickle file.


*****  Sat Jun 16 10:57:25 CEST 2018  *****

Renamed spitzer.py to pup_spitzer.py


*****  Sun Jun 17 12:48:05 CEST 2018  *****

Reorganized the project, adding the core and inst modules that
contain the main reduction steps and the dataset initialization
routines, respectively.

*****

Renamed uncd variable to uncert.

*****

Return to original location after running core.center() and
core.photom().


*****  Sun Oct 14 17:00:00 CEST 2018  *****

Use datafile variable for the filepath to data, rather than using the
data variable itself (same for uncert and bdmskd).
Revamped io.save() accordingly.


*****  Di 5. Feb 15:43:13 CET 2019  *****

Some cosmetics.

*****

Added fitting and retrieval fixes from Bell's run.


*****  Sun Mar 7 22:37:09 CET 2021  *****

Synced with WASP-12b version.


*****  Mon Mar 8 21:39:18 CET 2021  *****

Sorted out files in stats module.

*****

Added __version__ variable into VERSION.py

*****

Added ophase.py into models module with orbital-phase lightcurve
model.
Fixed a few other bugs to get the pupppies package to import without
breaking.

*****

Got setup.py up to speed, puppies is now installable.

*****

Removed MCcubed submodule.
Added mc3 requirement.

*****

Added .readthedocs.yml file.
Updated docs conf.py and other docs.
Removed CONTRIBUTING.md

*****

Added pyproject.toml file.

*****

Updated mc3 required version to 3.0.6.


*****  Thu Mar 11 11:53:47 CET 2021  *****

Removed eclipse submodule, replaced with source files.
Fixed some bugs related to mc3 dependency.

*****

Updated LICENSE.

*****

PEP8ed puppies/driver.py.

*****

Added ROOT constant into tools module with puppies root location.

*****

PEP8ed pup_spitzer.py

*****

Renamed io/loadsave.py to io/io.py

*****

PEP8ed io.py.
