@@ -1,7 +1,6 @@
-# Copyright (c) 2018 Patricio Cubillos and contributors.
-# puppies is open-source software under the MIT license (see LICENSE).
+# Copyright (c) 2021 Patricio Cubillos
+# puppies is open-source software under the MIT license (see LICENSE)
 
-# Commands:
 from .pup_spitzer import *
 
 __all__ = pup_spitzer.__all__
@@ -10,7 +9,7 @@ __all__ = pup_spitzer.__all__
 # or is a magic attribute, and that isn't a submodule of this package
 for varname in dir():
     if not ((varname.startswith('__') and varname.endswith('__')) or
-            varname in __all__ ):
+            varname in __all__):
         del locals()[varname]
 del(varname)
 
